document other links kind of working

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,25 +1,44 @@
 input[type="file"]::file-selector-button {
-    border-radius: 4px;
-    padding: 0 16px;
-    height: 40px;
-    cursor: pointer;
-    background-color: white;
-    border: 1px solid rgba(0, 0, 0, 0.16);
-    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
-    margin-right: 16px;
-    transition: background-color 200ms;
-  }
-  
-  /* file upload button hover state */
-  input[type="file"]::file-selector-button:hover {
-    background-color: #f3f4f6;
-  }
-  
-  /* file upload button active state */
-  input[type="file"]::file-selector-button:active {
-    background-color: #e5e7eb;
-  }
+  border-radius: 4px;
+  padding: 0 16px;
+  height: 40px;
+  cursor: pointer;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
+  margin-right: 16px;
+  transition: background-color 200ms;
+}
 
-  .custom-img {
-    width: 50px;
-  }
+/* file upload button hover state */
+input[type="file"]::file-selector-button:hover {
+  background-color: #f3f4f6;
+}
+
+/* file upload button active state */
+input[type="file"]::file-selector-button:active {
+  background-color: #e5e7eb;
+}
+
+.custom-img {
+  width: 50px;
+}
+
+.inputs-secion-container {
+  position: relative;
+  width: 50%;
+  display: block;
+}
+.inputs-secion-container input {
+  width: 90%;
+}
+#addInputButton {
+  position: absolute;
+    /* left: 21%; */
+    right: -8%;
+    top: 0;
+}
+.dynamic-input {
+  display: block;
+  margin-top: 1rem;
+}
