--- a/views/pages/subject/edit-subject.ejs
+++ b/views/pages/subject/edit-subject.ejs
@@ -14,20 +14,20 @@
           <!-- Page Heading -->
           <div class="card shadow mb-4">
             <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">Edit Lesson</h6>
+              <h6 class="m-0 font-weight-bold text-primary">Edit Subject</h6>
             </div>
             <div class="card-body">
-              <form class="user" id="lessonForm">
+              <form class="user" id="subjectForm">
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label for="categoryTitle">Lesson Title</label>
+                      <label for="subjectTitle">Subject Title</label>
                       <input
                         type="text"
                         name="title"
                         class="form-control form-control-user"
-                        id="categoryTitle"
-                        aria-describedby="categoryTitle"
+                        id="subjectTitle"
+                        aria-describedby="subjectTitle"
                         placeholder="Enter title"
                       />
                     </div>
@@ -39,7 +39,6 @@
                         type="text"
                         name="shortDescription"
                         class="form-control form-control-user"
-                        id="shortDescription"
                         placeholder="Short Decription"
                       />
                     </div>
@@ -48,26 +47,25 @@
                 <div class="row mb-2">
                   <div class="col-md-6">
                     <div class="form-group">
-                      <label for="category">Which subject are you adding for? </label>
-                        
-                        <select name="subject" class="form-control">
+                      <label for="semester">To which semester does it belong to? </label>
+                        <select name="semester" class="form-control">
                         <option>choose below</option>
-                        <% subjectsList.forEach(subject => { %>
-                        <option value="<%-subject.id %>">
-                          <%- subject.title %>
+                        <% semestersList.forEach(semester => { %>
+                        <option value="<%-semester.id %>">
+                          <%- semester.title %>
                         </option>
                         <%})%>
                       </select>
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <label for="lessonPic" style="display: block"
-                      >Category pic</label
+                    <label for="subjectPic" style="display: block"
+                      >Semester pic</label
                     >
                     <input
                       type="file"
-                      name="lessonPic"
-                      id="lessonPic"
+                      name="subjectPic"
+                      id="subjectPic"
                       placeholder=""
                     />
                   </div>
@@ -75,9 +73,9 @@
                 <button
                   type="button"
                   class="btn btn-primary btn-user btn-block"
-                  onclick="createLesson()"
+                  onclick="editSubject()"
                 >
-                  Create Lesson
+                  Create Subject
                 </button>
                 <hr />
               </form>
@@ -103,25 +101,25 @@
   <!-- End of Page Wrapper -->
 
   <script>
-    const createLesson = () => {
-      const formElement = document.querySelector("#lessonForm");
+    const editSubject = () => {
+      const formElement = document.querySelector("#subjectForm");
       const formData = new FormData(formElement);
-      postLessonData(formData).then(async (response) => {
+      postSubjectData(formData).then(async (response) => {
         if (response.status === 200) {
-          window.location.href = "/lessons";
+          window.location.href = "/subjects";
         }
       });
     };
 
-    const postLessonData = async (lessonData) => {
+    const postSubjectData = async (categoryData) => {
       const { accessToken } = JSON.parse(localStorage.getItem("tokens"));
 
-      const response = await fetch("/api/v1/lesson/create-lesson", {
+      const response = await fetch("/api/v1/subject/create-subject", {
         method: "POST",
         headers: {
           Authorization: `Bearer ${accessToken}`,
         },
-        body: lessonData,
+        body: categoryData,
       });
       return response;
     };
