--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -44,7 +44,13 @@
   <!-- Custom scripts for all pages-->
   <script src="/js/sb-admin-2.min.js"></script>
 
+  
+
+
   <!-- Page level plugins -->
   <script src="/vendor/datatables/jquery.dataTables.min.js"></script>
   <script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+  <!-- App level plugins -->
+  <script src="/js/app.js"></script>
 </html>
