--- a/views/pages/category/edit-category.ejs
+++ b/views/pages/category/edit-category.ejs
@@ -1,116 +1,136 @@
 <body id="page-top">
-    <!-- Page Wrapper -->
-    <div id="wrapper">
-      <%- include ("../../partials/sidebar") %>
-  
-      <!-- Content Wrapper -->
-      <div id="content-wrapper" class="d-flex flex-column">
-        <!-- Main Content -->
-        <div id="content">
-          <%- include ("../../partials/top-navbar") %>
-  
-          <!-- Begin Page Content -->
-          <div class="container-fluid">
-            <!-- Page Heading -->
-            <div class="card shadow mb-4">
-              <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">Edit Category</h6>
-              </div>
-              <div class="card-body">
-                <form class="user" id="categoryForm">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="form-group">
-                        <label for="categoryTitle">Category Title</label>
-                        <input
-                          type="text"
-                          name="title"
-                          class="form-control form-control-user"
-                          id="categoryTitle"
-                          aria-describedby="categoryTitle"
-                          placeholder="Enter title"
-                        />
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="form-group">
-                        <label for="shortDescription">Short Description</label>
-                        <input
-                          type="text"
-                          name="shortDescription"
-                          class="form-control"
-                          id="categoryPic"
-                          placeholder="Short Decription"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row mb-2">
-                    <div class="col-md-12">
-                      <label for="categoryPic" style="display: block"
-                        >Category pic</label
-                      >
+  <!-- Page Wrapper -->
+  <div id="wrapper">
+    <%- include ("../../partials/sidebar") %>
+
+    <!-- Content Wrapper -->
+    <div id="content-wrapper" class="d-flex flex-column">
+      <!-- Main Content -->
+      <div id="content">
+        <%- include ("../../partials/top-navbar") %>
+
+        <!-- Begin Page Content -->
+        <div class="container-fluid">
+          <!-- Page Heading -->
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+              <h6 class="m-0 font-weight-bold text-primary">Edit Category</h6>
+            </div>
+            <div class="card-body">
+              <form class="user" id="categoryForm">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="categoryTitle">Category Title</label>
                       <input
-                        type="file"
-                        name="categoryPic"
-                        id="categoryPic"
-                        placeholder=""
+                        type="text"
+                        name="title"
+                        class="form-control form-control-user"
+                        id="categoryTitle"
+                        value="<%- category.title %>"
+                        aria-describedby="categoryTitle"
+                        placeholder="Enter title"
                       />
                     </div>
                   </div>
-                  <button
-                    type="button"
-                    class="btn btn-primary btn-user btn-block"
-                    onclick="editCategory()"
-                  >
-                    Create Category
-                  </button>
-                  <hr />
-                </form>
-              </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="shortDescription">Short Description</label>
+                      <input
+                        type="text"
+                        name="shortDescription"
+                        class="form-control form-control-user"
+                        id="categoryPic"
+                        value="<%- category.shortDescription %>"
+                        placeholder="Short Decription"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="row mb-2">
+                  <div class="col-md-12">
+                    <div class="image-display-section">
+                      <i
+                        class="fas fa-window-close close-icon"
+                        onclick="showFileSection()"
+                      ></i>
+                      <img
+                        class="category-image"
+                        alt="Image placeholder"
+                        src="/img/category-images/<%- category.imagePath %>"
+                      />
+                    </div>
+                    <div class="file-section-container">
+                      <div class="d-flex" style="width: 100%">
+                        <label for="categoryPic" style="display: block"
+                          >Category pic</label
+                        >
+                        <input
+                          type="file"
+                          name="categoryPic"
+                          id="categoryPic"
+                          placeholder=""
+                        />
+                        <i
+                          class="fas fa-window-close file-close-icon"
+                          onclick="showImageSection()"
+                        ></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <button
+                  type="button"
+                  class="btn btn-primary btn-user btn-block"
+                  onclick="editCategory()"
+                >
+                  Create Category
+                </button>
+                <hr />
+              </form>
             </div>
           </div>
-          <!-- /.container-fluid -->
         </div>
-        <!-- End of Main Content -->
-  
-        <!-- Footer -->
-        <footer class="sticky-footer bg-white">
-          <div class="container my-auto">
-            <div class="copyright text-center my-auto">
-              <span>Copyright &copy; Your Website 2020</span>
-            </div>
-          </div>
-        </footer>
-        <!-- End of Footer -->
+        <!-- /.container-fluid -->
       </div>
-      <!-- End of Content Wrapper -->
+      <!-- End of Main Content -->
+
+      <!-- Footer -->
+      <footer class="sticky-footer bg-white">
+        <div class="container my-auto">
+          <div class="copyright text-center my-auto">
+            <span>Copyright &copy; Your Website 2020</span>
+          </div>
+        </div>
+      </footer>
+      <!-- End of Footer -->
     </div>
-    <!-- End of Page Wrapper -->
-  
-    <script>
-      const editCategory = () => {
-        const formElement = document.querySelector("#categoryForm");
-        const formData = new FormData(formElement);
-        postCategoryData(formData).then(async (response) => {
-          if (response.status === 200) {
-            window.location.href = "/categories";
-          }
-        });
-      };
-  
-      const postCategoryData = async (categoryData) => {
-        const { accessToken } = JSON.parse(localStorage.getItem("tokens"));
-  
-        const response = await fetch("/api/v1/category/create-category", {
-          method: "POST",
-          headers: {
-            Authorization: `Bearer ${accessToken}`,
-          },
-          body: categoryData,
-        });
-        return response;
-      };
-    </script>
-  </body>
-  
+    <!-- End of Content Wrapper -->
+  </div>
+  <!-- End of Page Wrapper -->
+
+  <script>
+    const editCategory = () => {
+      const formElement = document.querySelector("#categoryForm");
+      const formData = new FormData(formElement);
+      postCategoryData(formData).then(async (response) => {
+        if (response.status === 200) {
+          window.location.href = "/categories";
+        }
+      });
+    };
+
+    const postCategoryData = async (categoryData) => {
+      const { accessToken } = JSON.parse(localStorage.getItem("tokens"));
+
+      const response = await fetch("/api/v1/category/create-category", {
+        method: "POST",
+        headers: {
+          Authorization: `Bearer ${accessToken}`,
+        },
+        body: categoryData,
+      });
+      return response;
+    };
+  </script>
+</body>
