--- a/views/pages/category/edit-category.ejs
+++ b/views/pages/category/edit-category.ejs
@@ -61,7 +61,7 @@
                       />
                     </div>
                     <div class="file-section-container">
-                      <div class="d-flex" style="width: 100%">
+                      <div style="width: 100%">
                         <label for="categoryPic" style="display: block"
                           >Category pic</label
                         >
@@ -72,7 +72,7 @@
                           placeholder=""
                         />
                         <i
-                          class="fas fa-window-close file-close-icon"
+                          class="fas fa-window-close close-icon"
                           onclick="showImageSection()"
                         ></i>
                       </div>
