edit category is working

--- a/views/pages/category/edit-category.ejs
+++ b/views/pages/category/edit-category.ejs
@@ -82,9 +82,9 @@
                 <button
                   type="button"
                   class="btn btn-primary btn-user btn-block"
-                  onclick="editCategory('<%- category.shortDescription %>')"
+                  onclick="editCategory('<%- category.id %>')"
                 >
-                  Create Category
+                  Update Category
                 </button>
                 <hr />
               </form>
