create lesson is working

--- a/views/pages/lesson/create-lesson.ejs
+++ b/views/pages/lesson/create-lesson.ejs
@@ -50,7 +50,7 @@
                     <div class="form-group">
                       <label for="category">Which subject are you adding for? </label>
                         
-                        <select name="subject" class="form-control">
+                        <select name="subjectId" class="form-control">
                         <option>choose below</option>
                         <% subjectsList.forEach(subject => { %>
                         <option value="<%-subject.id %>">
