edit lesson is working

--- a/views/pages/lesson/edit-lesson.ejs
+++ b/views/pages/lesson/edit-lesson.ejs
@@ -40,7 +40,7 @@
                       </label>
 
                       <select
-                        name="subject"
+                        name="subjectId"
                         id="subjectValue"
                         class="form-control"
                       >
