--- a/views/pages/semester/create-semester.ejs
+++ b/views/pages/semester/create-semester.ejs
@@ -50,7 +50,7 @@
                     <div class="form-group">
                       <label for="category">Category </label>
                         
-                        <select name="category" class="form-control">
+                        <select name="categoryId" class="form-control">
                         <option>choose below</option>
                         <% categoriesList.forEach(category => { %>
                         <option value="<%-category.id %>">
