semester id is done

--- a/views/pages/subject/create-subject.ejs
+++ b/views/pages/subject/create-subject.ejs
@@ -48,7 +48,7 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <label for="semester">To which semester does it belong to? </label>
-                        <select name="semester" class="form-control">
+                        <select name="semesterId" class="form-control">
                         <option>choose below</option>
                         <% semestersList.forEach(semester => { %>
                         <option value="<%-semester.id %>">
