adding documents is working

--- a/views/pages/documents/add-document.ejs
+++ b/views/pages/documents/add-document.ejs
@@ -52,7 +52,7 @@
                         >Which lesson are you adding for?
                       </label>
 
-                      <select name="lesson" class="form-control">
+                      <select name="lessonId" class="form-control">
                         <option>choose below</option>
                         <% lessonsList.forEach(lesson => { %>
                         <option value="<%-lesson.id %>">
